--- a/dipper/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/dipper/overlay/frameworks/base/core/res/res/values/config.xml
@@ -374,7 +374,23 @@
                 <string ...>M -5,0 L -5,10 L 5,10 L 5,0 Z @dp</string>
          @see https://www.w3.org/TR/SVG/paths.html#PathData
          -->
-    <string translatable="false" name="config_mainBuiltInDisplayCutout">M -295,0 L -295,88 L 295,88 L 295,0 Z</string>
+    <string translatable="false" name="config_mainBuiltInDisplayCutout">
+	M339,0.10000354 
+	L338.438235,0.10000354 
+	C318.287069,0.10000354 303.921221,1.92414004 297.818519,24.176374 
+	L292.311611,44.2307187 
+	C285.295731,69.8076784 267.243762,90 236.156733,90 
+	L0,90 
+	L-236.156733,90 
+	C-267.243762,90 -285.295731,69.8076784 -292.311611,44.2307187 
+	L-297.818519,24.176374 
+	C-303.921221,1.92414004 -318.287069,0.10000354 -338.438235,0.10000354 
+	L-339,0.10000354 
+	L-339,0 
+	L339,0 
+	L339,0.10000354 
+	Z
+    </string>
 
     <!-- Stability requirements in milliseconds for accepting a new brightness level.  This is used
          for debouncing the light sensor.  Different constants are used to debounce the light sensor
