--- a/dipper/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/dipper/overlay/frameworks/base/core/res/res/values/config.xml
@@ -1057,9 +1057,22 @@
     <integer name="config_multiuserMaximumUsers">4</integer>
 
     <!-- Vibrator pattern for feedback about a long screen/key press -->
-    <!-- TODO(b/78128429): increase duration to account for the long latency -->
     <integer-array name="config_longPressVibePattern">
-        <item>23</item>
+        <item>0</item>
+        <item>7</item>
+        <item>10</item>
+    </integer-array>
+	
+    <!-- Vibrator pattern for feedback about touching a virtual key -->
+    <integer-array name="config_virtualKeyVibePattern">
+        <item>0</item>
+        <item>5</item>
+        <item>10</item>
+    </integer-array>
+
+    <!-- Vibrator pattern for a very short but reliable vibration for soft keyboard tap -->
+    <integer-array name="config_keyboardTapVibePattern">
+        <item>10</item>
     </integer-array>
 
     <!-- The URI to associate with each ringtone effect constant, intended to be used with the
